# SeniorProject2024

./: .bashrc  .gitattributes  .gitconfig  .gitignore  .realsense-config.json  README.md  frames.gv  plan
Maps/: 0127_2.yaml  0201.pgm  0201.yaml  b210.pgm  map.pgm  testmap.pgm
RoverosongApp/app/: build.gradle.kts  google-services.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
catkin_ws/: frames.gv  my_ros_params.yaml
catkin_ws/src/localization_correction/: CMakeLists.txt  package.xml
catkin_ws/src/move_base_navigation/: package.xml
catkin_ws/src/my_karto_package/: CMakeLists.txt
catkin_ws/src/my_robot_navigation/: package.xml
catkin_ws/src/robot_setup_tf/: CMakeLists.txt  package.xml
catkin_ws/src/robot_setup_tf/launch/: robot_navigate.launch  robot_state_publisher.launch  robot_tf.launch
catkin_ws/src/robot_setup_tf/msg/: RobotCommand.msg  RobotState.msg
catkin_ws/src/robot_setup_tf/scripts/: initialpose_publisher.py  mock_simulation.py  robot_battery_firebase.py  robot_controller.py  robot_global_navi.py  robot_monitor_parser.py  robot_navigate.py  robot_tf.py  roverosong_nav2.py
catkin_ws/src/robot_setup_tf/urdf/: roverosong.urdf
catkin_ws_0309/src/my_karto_package/: package.xml
gradle/wrapper/: gradle-wrapper.properties
roverosong-main/RoverosongApp/: build.gradle.kts  settings.gradle.kts
roverosong_app/roverosong-main/: gradle.properties
src/my_robot_navigation/: CMakeLists.txt
src/my_robot_navigation/Maps/: 0127_2.pgm  (+1 more)
src/robot_setup_tf/: settings.py
src/vision_pillar_detector/: CMakeLists.txt  package.xml
(+137 files in other folders)
